common/knative-openshift/base/knative-eventing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-eventing
  labels:
    istio-injection: enabled
